# Week7Cmake

week7/cmake-variant/: CMakeLists.txt
week7/cmake-variant/src/main/: fibonacci.cpp  main.cpp
week7/gradle-variant 2/: build.gradle
week7/gradle-variant 2/src/main/cpp/: fibonacci.cpp  fibonacci.h  main.cpp
